# med-warrant

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  literature-summary.md  medical-judge-demo-spec.md  pyproject.toml  railway.json  requirements.txt  vercel.json
backend/: capping.py  db.py  escalation.py  evidence_store.py  grader.py  llm_provider.py  main.py  models.py  tier_classifier.py
backend/tests/: conftest.py  test_api.py  test_capping.py  test_evidence_store.py  test_grader.py  test_tier_classifier.py
data/: verdicts.json
data/cases/: case_0421.json  case_0588.json  case_0712.json  case_0934.json
data/evidence/: coh_chest_pain_outcomes.json  coh_inr_followup.json  coh_metformin_lactic.json  coh_nsaid_gi_bleed.json  coh_peds_dosing_errors.json  coh_warfarin_adverse_events.json  exp_chest_pain_casereport.json  exp_diabetes_monitoring_opinion.json  exp_ibuprofen_food_opinion.json  exp_metformin_sickday.json  exp_pain_anticoag_opinion.json  exp_peds_dosing_opinion.json  gl_chest_pain_redflags.json  gl_chest_pain_triage.json  gl_diabetes_lifestyle.json  gl_metformin_contraindication.json  gl_otc_ibuprofen_dosing.json  gl_pain_alternatives_anticoag.json  gl_peds_fever_redflags.json  gl_peds_paracetamol_dosing.json  gl_warfarin_nsaid_interaction.json  rct_acetaminophen_fever_efficacy.json  rct_early_acs_pathway.json  rct_ibuprofen_gastro.json  rct_metformin_glycemic.json  rct_warfarin_inr_monitoring.json  sr_metformin_renal.json  sr_paracetamol_peds_safety.json  (+2 more)
docs/: index.html  landing.html  演示指南.md  系统说明.md
frontend/: index.html  package-lock.json
(+37 files in other folders)
